--- a/developers/learn-more/browser-support.html
+++ b/developers/learn-more/browser-support.html
@@ -54,38 +54,45 @@ title: Learn More - Browser Support
           </tr>
           <tr>
             <td><strong>Safari</strong></td>
-            <td>11</td>
+            <td>12</td>
             <td>iOS</td>
-            <td><span>116,122</span></td>
-            <td><span>34.38</span>%</td>
+            <td><span>106,083</span></td>
+            <td><span>35.88</span>%</td>
+          </tr>
+          <tr>
+            <td><strong>Chrome</strong></td>
+            <td>71.0.3578.98</td>
+            <td>Windows</td>
+            <td><span>23,042</span></td>
+            <td><span>7.90</span>%</td>
+          </tr>
+          <tr>
+            <td><strong>Chrome</strong></td>
+            <td><span>71.0.3578.99</span></td>
+            <td>Android</td>
+            <td><span>19,969</span></td>
+            <td><span>6.75</span>%</td>
           </tr>
           <tr>
             <td><strong>Safari</strong></td>
-            <td>10</td>
+            <td>11</td>
             <td>iOS</td>
-            <td><span>12,271</span></td>
-            <td><span>3.63</span>%</td>
-          </tr>
-          <tr>
-            <td><strong>Chrome</strong></td>
-            <td><span>65.0.3325.109</span></td>
-            <td>Android</td>
-            <td><span>26,111</span></td>
-            <td><span>7.73</span>%</td>
+            <td><span>17,441</span></td>
+            <td><span>5.90</span>%</td>
           </tr>
           <tr>
             <td><strong>Safari (in-app)</strong></td>
-            <td>(not set)</td>
-            <td>iOS</td>
-            <td><span>26,632</span></td>
-            <td><span>7.88</span>%</td>
+            <td><span>not set</span></td>
+            <td><span>iOS</span></td>
+            <td><span>12,942</span></td>
+            <td><span>4.38</span>%</td>
           </tr>
           <tr>
             <td><strong>Chrome</strong></td>
-            <td><span>65.0.3325.181</span></td>
-            <td><span>Windows</span></td>
-            <td><span>21,165</span></td>
-            <td><span>6.27%</span></td>
+            <td><span>71.0.3578.98</span></td>
+            <td><span>Macintosh</span></td>
+            <td><span>11,535</span></td>
+            <td><span>3.90</span>%</td>
           </tr>
           <tr>
             <td></td>
@@ -103,7 +110,7 @@ title: Learn More - Browser Support
           </tr>
         </tbody>
       </table>
-      <p class="quiet pull-right"><em>Updated April, 5, 2018</em></p>
+      <p class="quiet pull-right"><em>Updated February 7, 2019</em></p>
     </div>
   </div>
 </div>
